--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -29,14 +29,15 @@ Metrics/LineLength:
   Description: 'Limit lines to 120 characters.'
   Max: 120
 
-Lint/EndAlignment:
-  AlignWith: variable
-  SupportedStyles:
-    - keyword
-    - variable
+Layout/EndAlignment:
+  EnforcedStyleAlignWith: variable
 
-Style/AlignParameters:
+
+Layout/AlignParameters:
   EnforcedStyle: with_fixed_indentation
   SupportedStyles:
     - with_first_parameter
     - with_fixed_indentation
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
